<?xml version="1.0" encoding="utf-8"?>
<ScrollView  android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_weight="1">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_recovery"
            android:id="@+id/textView_section_recovery"
            android:textSize="15sp"
            android:textColor="@color/primary"
            android:paddingTop="1dp"
            android:textStyle="bold"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="22dp"
            android:background="@color/primary"/>


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_twrp"
            android:layout_gravity="center"
            android:elevation="4dp"
            android:layout_marginTop="40dp"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true" >

            <ImageView
                android:id="@+id/imageView_twrp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/twrp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twrp_head"
                android:id="@+id/textView_twrp_head"
                android:textSize="17sp"
                android:paddingLeft="90dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_twrp_ver"
                android:id="@+id/twrp_version"
                android:textSize="11sp"
                android:paddingLeft="90dp"
                android:paddingTop="65dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_installed"
                android:id="@+id/twrp_status"
                android:textSize="12sp"
                android:paddingStart="160dp"
                android:paddingRight="10dp"
                android:gravity="right"
                android:paddingTop="65dp"
                android:textStyle="italic"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_philz"
            android:layout_gravity="center"
            android:elevation="4dp"
            android:layout_marginTop="143dp"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true" >

            <ImageView
                android:id="@+id/imageView_philz"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/cwm"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cwm_head"
                android:id="@+id/textView_cwm_head"
                android:textSize="17sp"
                android:paddingLeft="90dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_philz_ver"
                android:id="@+id/phiz_version"
                android:textSize="11sp"
                android:paddingLeft="90dp"
                android:paddingTop="65dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_installed"
                android:id="@+id/philz_status"
                android:textSize="12sp"
                android:paddingStart="160dp"
                android:paddingRight="10dp"
                android:gravity="right"
                android:paddingTop="65dp"
                android:textStyle="italic"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_cwm"
            android:layout_gravity="center"
            android:elevation="4dp"
            android:layout_marginTop="246dp"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true" >

            <ImageView
                android:id="@+id/imageView_cwm"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/cwm"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cwm_label"
                android:id="@+id/textView_cot_head"
                android:textSize="17sp"
                android:paddingLeft="90dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_cwm_ver"
                android:id="@+id/cwm_version"
                android:textSize="11sp"
                android:paddingLeft="90dp"
                android:paddingTop="65dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_installed"
                android:id="@+id/cwm_status"
                android:textSize="12sp"
                android:paddingStart="160dp"
                android:paddingRight="10dp"
                android:gravity="right"
                android:paddingTop="65dp"
                android:textStyle="italic"/>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_utility"
            android:id="@+id/textView_section_utility"
            android:textSize="15sp"
            android:textColor="@color/primary"
            android:paddingTop="349dp"
            android:textStyle="bold"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="370dp"
            android:background="@color/primary"/>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_aroma"
            android:layout_gravity="center"
            android:elevation="4dp"
            android:layout_marginTop="388dp"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true" >

            <ImageView
                android:id="@+id/imageView_aroma"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/aroma"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aroma_head"
                android:id="@+id/textView_aroma_head"
                android:textSize="17sp"
                android:paddingLeft="90dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_aroma_ver"
                android:id="@+id/aroma_version"
                android:textSize="11sp"
                android:paddingLeft="90dp"
                android:paddingTop="65dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_installed"
                android:id="@+id/aroma_status"
                android:textSize="12sp"
                android:paddingStart="160dp"
                android:paddingRight="10dp"
                android:gravity="right"
                android:paddingTop="65dp"
                android:textStyle="italic"/>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>
