<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_twrp"
        android:layout_gravity="center"
        android:elevation="4dp"
        android:layout_marginTop="2dp"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/imageView_twrp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/twrp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twrp_head"
            android:id="@+id/textView_twrp_head"
            android:textSize="17sp"
            android:paddingLeft="90dp"
            android:paddingTop="10dp" />

        <Button
            android:id="@+id/btn_install_twrp"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:text="@string/install"
            android:layout_marginTop="54dp"
            android:layout_marginLeft="210dp"
            android:background="@color/primary"
            android:textColor="#FFFFFF"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_cwm"
        android:layout_gravity="center"
        android:elevation="4dp"
        android:layout_marginTop="105dp"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/imageView_cwm"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/cwm"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cwm_head"
            android:id="@+id/textView_cwm_head"
            android:textSize="17sp"
            android:paddingLeft="90dp"
            android:paddingTop="10dp" />

        <Button
            android:id="@+id/btn_install_cwm"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:text="@string/install"
            android:layout_marginTop="54dp"
            android:layout_marginLeft="210dp"
            android:background="@color/primary"
            android:textColor="#FFFFFF"/>

    </android.support.v7.widget.CardView>


</RelativeLayout>
